# data_common

./: Dockerfile  README.md  __init__.py  altair_theme.py  base_requirements.txt  charting.py  chrome_setup.bash  data-repo-readme.md  dataframes.py  docker-compose.yml  exporters.py  packages_setup.bash  progress.py  pyproject.toml
.github/workflows/: docker-image.yml
apis/: google_api.py
charting/: __init__.py  chart.py  download.py  saver.py  sw_theme.py  theme.py
df_extensions/: common.py  space.py  viz.py
helpers/: pipe.py
management/: cli.py  exporters.py  render_processing.py  settings.py  upload.py
resources/: reference.docx
src/data_common/: data-repo-readme.md  notebook.py  progress.py
src/data_common/apis/: google_api.py
src/data_common/charting/: __init__.py  chart.py  download.py  renderer.py  saver.py  str_enum.py  sw_theme.py  theme.py
src/data_common/csv/: __init__.py
src/data_common/dataset/: __init__.py  __main__.py  jekyll_management.py  resource_management.py  rich_assist.py  settings.py  table_management.py  version_management.py
src/data_common/db/: __init__.py  duck.py
src/data_common/df_extensions/: space.py
src/data_common/helpers/: parquet.py  pipe.py  typing.py  url.py
src/data_common/local_authority/: __init__.py
src/data_common/management/: cli.py  exporters.py  render_processing.py  run_notebook.py  settings.py  upload.py
src/data_common/notebookcli/: __main__.py
src/data_common/pandas/: __init__.py
src/notebook_helper/: notebook.py
src/notebook_helper/charting/: theme.py  (+2 more)
typings/pandas/: _testing.pyi
(+16 files in other folders)
