[tool.poetry]
name = "data_common"
version = "1.1.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
numpy = "1.21.0"
openpyxl = "3.0.7"
pandas = "1.4.2"
scikit-learn = "^1.0.2"
unicodecsv = "0.14.1"
xlrd = "2.0.1"
xlwt = "1.3.0"
tabulate = "0.8.9"
altair = "4.1.0"
altair-saver = "0.5.0"
jupyter = "1.0.0"
"ruamel.yaml" = "0.17.10"
pypandoc = "1.5"
flake8 = "3.9.2"
htmltabletomd = "1.0.0"
rich = "12.4.1"
click = "8.0.1"
rich-click = "^1.4"
papermill = "2.3.3"
google-api-python-client = "2.21.0"
google-auth-httplib2 = "0.1.0"
google-auth-oauthlib = "0.4.6"
ptitprince = "0.2.5"
jupyterlab = "3.2.6"
jupyterlab-link-share = "0.2.4"
scipy = "1.8.0"
cookiecutter = "1.7.3"
XlsxWriter = "^3.0.3"
frictionless = "^4.38.0"
toml = "^0.10.2"
black = {extras = ["jupyter"], version = "^22.3.0"}
pytest = "^7.1.2"
pyright = "^1.1.248"
pylint = "2.12.2"
seaborn = "0.11.2"
lxml = "^4.9.1"
pyarrow = "^11.0.0"
duckdb = "^0.6.1"
sqlfluff = "^1.4.5"
pydantic = "^2.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"